Resolve merge conflicts and integrate blackboard system across all agents

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,4 +31,7 @@ dependencies = [
     "tushare>=1.4.21",
     "typing-extensions>=4.14.0",
     "yfinance>=0.2.63",
+    "fastapi>=0.104.0",
+    "uvicorn>=0.24.0",
+    "pydantic>=2.0.0",
 ]
