Not done yet, added data scraping

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ eval_data/
 .env
 results
 venv/
+/tools/dataflow_fixtures/node_modules
+/tools/dataflow_fixtures/finnhub_data
+/tools/dataflow_fixtures/reddit_data
